Refonte complete du workflow regional + module Finance separe ## Phase 1: Securite - JWT_SECRET obligatoire (pas de fallback) - Rate limiting sur login (5 tentatives / 15 min) - Mot de passe minimum 8 caracteres - CORS configure - Ajout .gitignore ## Phase 2: Workflow regional - Manager voit uniquement sa region - Verification region lors validation - Nouveaux statuts: EN_ATTENTE_MANAGER, EN_ATTENTE_RELEX, RESERVEE, REFUSEE - regionAcronym sur les demandes ## Phase 3: Module Finance separe - Nouveau modele Facture - Routes CRUD /api/factures - Gestion des creances hotels independante du workflow - Statistiques et export CSV ## Phase 4: Frontend - Dashboard avec region - Approvals filtre par region - Relex: confirmation reservation - Finance: gestion des factures hotels ## Phase 5: Ameliorations - README mis a jour - Seeds avec comptes regionaux - CRUD utilisateurs complet

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
 PORT=4000
 MONGO_URI=mongodb://mongo:27017/sonatrach_reservations
-JWT_SECRET=change_me_super_secret
+JWT_SECRET=CHANGE_THIS_TO_A_SECURE_RANDOM_STRING_MIN_32_CHARS
+CORS_ORIGIN=http://localhost:8080
