--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "csv-stringify": "^6.5.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-rate-limit": "^7.1.5",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
