feat: prepare backend for Railway deployment - Add railway.json configuration - Add /api/health endpoint for healthchecks - Update CORS to support multiple origins (comma-separated) - Update .env.example with Vercel frontend URL

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=4000
-MONGO_URI=mongodb://mongo:27017/sonatrach_reservations
+MONGO_URI=mongodb://localhost:27017/sonatrach_reservations
 JWT_SECRET=change_me_super_secret
+REFRESH_SECRET=change_me_refresh_secret
