--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,8 +2,9 @@ PORT=4000
 MONGO_URI=mongodb://mongo:27017/sonatrach_reservations
 JWT_SECRET=CHANGE_THIS_TO_A_SECURE_RANDOM_STRING_MIN_32_CHARS
 REFRESH_SECRET=CHANGE_THIS_TO_A_DIFFERENT_SECURE_RANDOM_STRING
-CORS_ORIGIN=http://localhost:8080
-FRONTEND_URL=http://localhost:8080
+# CORS - Comma-separated list of allowed origins
+CORS_ORIGIN=http://localhost:8080,https://frontend-nassiiimms-projects.vercel.app
+FRONTEND_URL=https://frontend-nassiiimms-projects.vercel.app
 
 # SMTP Configuration (optional - emails will be logged in dev mode if not set)
 # SMTP_HOST=smtp.example.com
